updates gp notebooks

--- a/module1-regression-1/JDS_SHR_211_guided_project_notes.ipynb
+++ b/module1-regression-1/JDS_SHR_211_guided_project_notes.ipynb
@@ -1,315 +1,308 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+ "nbformat": 4,
+ "nbformat_minor": 0,
+ "metadata": {
+  "colab": {
+   "provenance": []
   },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "T5CVLq4CiD_J"
-      },
-      "source": [
-        "# BloomTech Data Science"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XdKtS6Gi5jul"
-      },
-      "source": [
-        "# Importing the necessary libraries\n",
-        "\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "from sklearn.metrics import mean_absolute_error"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-sZguZ2xWoVG"
-      },
-      "source": [
-        "import sys\n",
-        "\n",
-        "if 'google.colab' in sys.modules:\n",
-        "  # If you're on Colab:\n",
-        "  DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/'\n",
-        "else:\n",
-        "  # If you're working locally:\n",
-        "  DATA_PATH = '..../data/'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2EVx8r5HLa6f"
-      },
-      "source": [
-        "# I. Wrangle Data"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "syxaPzCWqfTY"
-      },
-      "source": [
-        "df = pd.read_csv(DATA_PATH + 'condos/tribeca.csv')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "QuJLwTdkNxQu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Wrangle function to Clean up data\n",
-        "\n",
-        "def wrangle(filepath):\n",
-        "   # Load the csv file, convert the date column to a datetime object and set it as index.\n",
-        "  df = pd.read_csv(filepath,\n",
-        "                   parse_dates=['SALE_DATE'],\n",
-        "                   index_col=['SALE_DATE'],\n",
-        "                   na_values=[0.0])\n",
-        "\n",
-        "  #drop constant columns\n",
-        "\n",
-        "\n",
-        "  #Drop high-cardinality categorical columns (HCCC's)\n",
-        "\n",
-        "\n",
-        "  return df\n",
-        "\n",
-        "df = wrangle(DATA_PATH + 'condos/tribeca.csv')\n"
-      ],
-      "metadata": {
-        "id": "rbRGwAeJNxB9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GgRcyfQMXhzJ"
-      },
-      "source": [
-        "# II. Split Data\n",
-        "\n",
-        "Split our dataset into a **feature matrix `X`** and a **target vector `y`**."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wTYqSJ8chRGa"
-      },
-      "source": [
-        "# Split into feature matrix X and target vector y"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CuwsiXRlYsjG"
-      },
-      "source": [
-        "# III. Establish Baseline\n",
-        "\n",
-        "If you had a *naïve model* that could only predict one value, how well would you model perform?"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print('Mean sale price:', )"
-      ],
-      "metadata": {
-        "id": "EphjlXB5fuVA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1Ek2mN04hTmT"
-      },
-      "source": [
-        "print('BASELINE MAE',)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NiWjkzmiBU3I"
-      },
-      "source": [
-        "# # Scatter plot to visualize the baseline\n",
-        "# plt.figure(figsize=(15, 10))\n",
-        "# plt.scatter(X, y)\n",
-        "# plt.plot(X, y_pred, label='Baseline', color='grey')\n",
-        "# plt.xlabel('Gross Sq Feet')\n",
-        "# plt.ylabel('Sale Price')\n",
-        "# plt.legend();"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3bFjzSkUdl21"
-      },
-      "source": [
-        "# IV. Build Model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "teYsy_7fhWiG"
-      },
-      "source": [
-        "# step 1: import predictor class\n",
-        "\n",
-        "\n",
-        "#step 2:Instantiate my predictor\n",
-        "\n",
-        "\n",
-        "# Step 3: fit my model\n",
-        "\n",
-        "\n",
-        "# step 4: make predictions\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Lo3CypnUfIwc"
-      },
-      "source": [
-        "# V. Check Metrics"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "l1WsFoaUJ_Vx"
-      },
-      "source": [
-        "#MAE of LinearRegression model\n",
-        "print('Linear Regression MAE', )"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jGYUL1mufdS-"
-      },
-      "source": [
-        "# VI. Communicate Results\n",
-        "\n",
-        "Plot model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "y6RUbvFdB3jl"
-      },
-      "source": [
-        "# Plotting baseline and our model to interpret the differences between the two methods.\n",
-        "plt.figure(figsize=(15, 10))\n",
-        "plt.scatter(X, y)\n",
-        "plt.plot(X, y_pred, label='Baseline', color='grey')\n",
-        "plt.plot(X, y_pred_lr, label='Linear Regression', color='orange')\n",
-        "plt.xlabel('Gross Sq Feet')\n",
-        "plt.ylabel('Sale Price')\n",
-        "plt.legend();"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qsDBGc49K7Uh"
-      },
-      "source": [
-        "What are our beta coefficients?"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rgoaqGY_KjnH"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6a-GOP4BLMOB"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# final equation"
-      ],
-      "metadata": {
-        "id": "UwIheciDf8Kx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f'SALE_PRICE={} + {}*GROSS_SQUARE_FEET')"
-      ],
-      "metadata": {
-        "id": "qGHw5XYpf8D7"
-      },
-      "execution_count": null,
-      "outputs": []
-    }
-  ]
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3"
+  }
+ },
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "T5CVLq4CiD_J"
+   },
+   "source": [
+    "# BloomTech Data Science"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "XdKtS6Gi5jul"
+   },
+   "source": [
+    "# Importing the necessary libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import mean_absolute_error"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "-sZguZ2xWoVG"
+   },
+   "source": [
+    "DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/'\n"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "2EVx8r5HLa6f"
+   },
+   "source": [
+    "# I. Wrangle Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "syxaPzCWqfTY"
+   },
+   "source": [
+    "df = pd.read_csv(DATA_PATH + 'condos/tribeca.csv')"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "source": [],
+   "metadata": {
+    "id": "QuJLwTdkNxQu"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# Wrangle function to Clean up data\n",
+    "\n",
+    "def wrangle(filepath):\n",
+    "   # Load the csv file, convert the date column to a datetime object and set it as index.\n",
+    "  df = pd.read_csv(filepath,\n",
+    "                   parse_dates=['SALE_DATE'],\n",
+    "                   index_col=['SALE_DATE'],\n",
+    "                   na_values=[0.0])\n",
+    "\n",
+    "  #drop constant columns\n",
+    "\n",
+    "\n",
+    "  #Drop high-cardinality categorical columns (HCCC's)\n",
+    "\n",
+    "\n",
+    "  return df\n",
+    "\n",
+    "df = wrangle(DATA_PATH + 'condos/tribeca.csv')\n"
+   ],
+   "metadata": {
+    "id": "rbRGwAeJNxB9"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "GgRcyfQMXhzJ"
+   },
+   "source": [
+    "# II. Split Data\n",
+    "\n",
+    "Split our dataset into a **feature matrix `X`** and a **target vector `y`**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "wTYqSJ8chRGa"
+   },
+   "source": [
+    "# Split into feature matrix X and target vector y"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "CuwsiXRlYsjG"
+   },
+   "source": [
+    "# III. Establish Baseline\n",
+    "\n",
+    "If you had a *naïve model* that could only predict one value, how well would you model perform?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "print('Mean sale price:', )"
+   ],
+   "metadata": {
+    "id": "EphjlXB5fuVA"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "1Ek2mN04hTmT"
+   },
+   "source": [
+    "print('BASELINE MAE',)"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "NiWjkzmiBU3I"
+   },
+   "source": [
+    "# # Scatter plot to visualize the baseline\n",
+    "# plt.figure(figsize=(15, 10))\n",
+    "# plt.scatter(X, y)\n",
+    "# plt.plot(X, y_pred, label='Baseline', color='grey')\n",
+    "# plt.xlabel('Gross Sq Feet')\n",
+    "# plt.ylabel('Sale Price')\n",
+    "# plt.legend();"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "3bFjzSkUdl21"
+   },
+   "source": [
+    "# IV. Build Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "teYsy_7fhWiG"
+   },
+   "source": [
+    "# step 1: import predictor class\n",
+    "\n",
+    "\n",
+    "#step 2:Instantiate my predictor\n",
+    "\n",
+    "\n",
+    "# Step 3: fit my model\n",
+    "\n",
+    "\n",
+    "# step 4: make predictions\n"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Lo3CypnUfIwc"
+   },
+   "source": [
+    "# V. Check Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "l1WsFoaUJ_Vx"
+   },
+   "source": [
+    "#MAE of LinearRegression model\n",
+    "print('Linear Regression MAE', )"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "jGYUL1mufdS-"
+   },
+   "source": [
+    "# VI. Communicate Results\n",
+    "\n",
+    "Plot model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "y6RUbvFdB3jl"
+   },
+   "source": [
+    "# Plotting baseline and our model to interpret the differences between the two methods.\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "plt.scatter(X, y)\n",
+    "plt.plot(X, y_pred, label='Baseline', color='grey')\n",
+    "plt.plot(X, y_pred_lr, label='Linear Regression', color='orange')\n",
+    "plt.xlabel('Gross Sq Feet')\n",
+    "plt.ylabel('Sale Price')\n",
+    "plt.legend();"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "qsDBGc49K7Uh"
+   },
+   "source": [
+    "What are our beta coefficients?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "rgoaqGY_KjnH"
+   },
+   "source": [],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "id": "6a-GOP4BLMOB"
+   },
+   "source": [],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# final equation"
+   ],
+   "metadata": {
+    "id": "UwIheciDf8Kx"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "print(f'SALE_PRICE={} + {}*GROSS_SQUARE_FEET')\n"
+   ],
+   "metadata": {
+    "id": "qGHw5XYpf8D7"
+   },
+   "execution_count": null,
+   "outputs": []
+  }
+ ]
 }
