--- a/module1-regression-1/JDS_SHR_211_guided_project_notes.ipynb
+++ b/module1-regression-1/JDS_SHR_211_guided_project_notes.ipynb
@@ -42,7 +42,7 @@
     "id": "-sZguZ2xWoVG"
    },
    "source": [
-    "DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/'\n"
+    "DATA_PATH = 'https://github.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/tree/master/data'\n"
    ],
    "execution_count": null,
    "outputs": []
